# S-d

./: .pre-commit-config.yaml  README.md  pyproject.toml  samples.jsonl  seeD_export.jsonl
docs/: QUICKSTART.md
scripts/: export_log.py  run_with_metrics.sh
src/: memory_log.db
src/seed/: cli.py  config.toml
src/seed/agents/: curator.py  self_test.py
src/seed/core/: boredom.py  dyad_engine.py  memory_log.py  metrics.py  runner_async.py  sense_bus.py
src/seed/plugins/: __init__.py  delta_cosine.py  sense_json.py
src/seed/util/: pg_helpers.py
tests/: test_async_runner.py  test_plugins.py  test_property.py  test_smoke.py
