[tool.poetry]
name = "seed"
version = "0.1.0"
description = "A project for the SeeD Reboot initiative."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
dataclasses = "*"
logging = "*"
pytest = "*"
hypothesis = "*"
rich = "*"
pydantic = "*"

[tool.poetry.scripts]
seed-run = "seed.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
